--- a/doc/chris.bib
+++ b/doc/chris.bib
@@ -315,6 +315,23 @@
   year =	 1997
 }
 
+@Misc{gautier:_rpy2,
+  year =	 2011,
+  author =	 {Laurent Gautier},
+  title =	 {\pkg{RPy2}: A Simple and Efficient Access to
+                  \proglang{R} from \proglang{Python}},
+  howpublished = {\url{http://rpy.sourceforge.net/rpy2.html}},
+  note =	 {Accessed 6 March, 2011}
+}
+
+
+@Misc{geus11,
+  author =	 {Roman Geus},
+  title =	 {\pkg{Pysparse}},
+  howpublished = {\url{http://pysparse.sourceforge.net/}},
+  year =	 2011,
+  note =	 {Accessed 6 March, 2011}
+}
 
 @Article{ StricklandMartinForbes2008,
   title =	 "Parameterisation and Efficient MCMC Estimation of
@@ -349,3 +366,4 @@
   address =	 {Amsterdam: North-Holland},
   otherinfo =	 {}
 }
+
